# djangoblog_app

./: pyproject.toml
blog/: views.py
blog/templates/blog/: index.html
mysite/: settings.py  urls.py
