[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["winston mhango <71964085+winstonmhango23@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.3"
whitenoise = "^6.0.0"
Brotli = "^1.0.9"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
